--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeanBorto/prueba-heroku1.git"
+  },
    "author": "Leandro Bortoluzzi",
   "license": "ISC",
   "dependencies": {
