--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ejercicio de HTML",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "startdev": "nodemon app.js"
   },
   "author": "Leandro Bortoluzzi",
