--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Ejercicio de HTML",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "startdev": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "Leandro Bortoluzzi",
   "license": "ISC",
